--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Cloudprimero Test</string>
+    <string name="background">background</string>
+    <string name="logo">logo</string>
 </resources>
